# seb_nodes

./: LICENSE  README.md  __init__.py  aspect_ratio_seb.py  depth_inpaint_seb.py  pyproject.toml  requirements.txt  save_advanced_node.py  save_image_seb.py  switch_masks_seb.py  switch_seb.py  unified_prompter_seb.py  unified_prompter_styles.json
.github/workflows/: publish.yml
dependencies/: bilateral_filtering.py  mesh.py  mesh_tools.py  networks.py  utils.py
js/: aspect_ratio_seb.js  save_advanced_ui.js  save_image_seb_ui.js  switch_seb.js
