[project]
name = "seb_nodes"
description = "Seb's Custom Nodes: Loaded SwitchMasks, SaveImage, AspectRatio, UnifiedPrompter, Switch & DepthInpaint."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/cyberhirsch/seb_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "@cyberhirsch"
DisplayName = "seb_nodes"
Icon = ""
